--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name" : "点餐h5",
-    "appid" : "",
+    "appid" : "__UNI__65D3CA0",
     "description" : "",
     "versionName" : "1.0.0",
     "versionCode" : "100",
@@ -56,5 +56,15 @@
         },
         "usingComponents" : true
     },
-    "vueVersion" : "2"
+    "vueVersion" : "2",
+    "h5" : {
+        "router" : {
+            "mode" : "history",
+            "base" : "./"
+        },
+        "devServer" : {
+            "https" : true,
+            "port" : ""
+        }
+    }
 }
