--- a/manifest.json
+++ b/manifest.json
@@ -63,7 +63,7 @@
             "base" : "./"
         },
         "devServer" : {
-            "https" : true,
+            "https" : false,
             "port" : ""
         }
     }
